# coding

./: .gitignore
C++/C++.for.Mathematicians/: Makefile
C++/C++.for.Mathematicians/Program.1.1-Hello.World/: Makefile  Makefile.am  README  configure.ac
C++/C++.for.Mathematicians/Program.1.1-Hello.World/doc/: Doxyfile.in
C++/C++.for.Mathematicians/Program.1.1-Hello.World/docs/: Doxyfile.in
C++/C++.for.Mathematicians/Program.1.1-Hello.World/src/: Makefile.am  main.cpp
bash/flash/: README  flash
bash/flash/cfg/: flash-20170905.cfg  flash.cfg
bash/flash/lib/: exit-status.sh  flash.sh  generic.sh
bash/md5sum-create/: README.md  md5sum-create  test.sh
bash/md5sum-create/cfg/: md5sum-create.cfg
bash/md5sum-create/lib/: exit-status.sh  generic.sh  md5sum-create.sh
