# Initialize GNU Autoconf (AC)
# ACINIT(package_name, version bug_report_address)
AC_INIT([hello-world], [0.1])

# Initialize GNU Automake (AM)
AM_INIT_AUTOMAKE
#AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

# Check for C++ compiler
AC_LANG(C++)

# Set the C++ compiler
AC_PROG_CXX

# Specify where the Makefiles should be produced.
AC_CONFIG_FILES([Makefile src/Makefile])

# Produce configure script
AC_OUTPUT
